Fixed some bugs

--- a/src/main/resources/assets/toolmod/lang/en_us.json
+++ b/src/main/resources/assets/toolmod/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "item.toolmod.copper_ingot": "Copper Ingot",
-  "block.toolmod.copper_block": "Block of Ruby",
+  "block.toolmod.copper_block": "Copper Block",
   "block.toolmod.copper_ore": "Copper Ore",
   "item.toolmod.copper_sword": "Copper Sword",
   "item.toolmod.copper_pickaxe": "Copper Pickaxe",
